force-app/main/default/objects/npe01__OppPayment__c/fields/Banking_Reference__c.field-meta.xml
<CustomField>
    <fullName>Banking_Reference__c</fullName>
    <formula>npe01__Opportunity__r.Banking_Reference__c</formula>
    <label>Banking Reference</label>
    <type>Text</type>
</CustomField>