force-app/main/default/objects/npe01__OppPayment__c/fields/Case_Safe_Id__c.field-meta.xml
<CustomField>
    <fullName>Case_Safe_Id__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Safe Id</label>
    <type>Text</type>
</CustomField>