force-app/main/default/objects/npe01__OppPayment__c/fields/Cheque_Drawer__c.field-meta.xml
<CustomField>
    <fullName>Cheque_Drawer__c</fullName>
    <label>Cheque Drawer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>