force-app/main/default/objects/npe01__OppPayment__c/fields/Cost_Centre__c.field-meta.xml
<CustomField>
    <fullName>Cost_Centre__c</fullName>
    <formula>npe01__Opportunity__r.Cost_Centre__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost Centre</label>
    <type>Text</type>
</CustomField>