force-app/main/default/objects/npe01__OppPayment__c/fields/External_Donation_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Donation_ID__c</fullName>
    <label>External Donation ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>