force-app/main/default/objects/npe01__OppPayment__c/fields/Financial_Coding__c.field-meta.xml
<CustomField>
    <fullName>Financial_Coding__c</fullName>
    <label>Financial Coding</label>
    <length>255</length>
    <type>Text</type>
</CustomField>