force-app/main/default/objects/npe01__OppPayment__c/fields/Formatted_Branch_Code__c.field-meta.xml
<CustomField>
    <fullName>Formatted_Branch_Code__c</fullName>
    <formula>IF(
CONTAINS(Fundraising_Branch_Code__c,&quot;01&quot;),
&quot;01&quot;,
Fundraising_Branch_Code__c)</formula>
    <label>Formatted Branch Code</label>
    <type>Text</type>
</CustomField>