force-app/main/default/objects/npe01__OppPayment__c/fields/Formatted_Cost_Centre__c.field-meta.xml
<CustomField>
    <fullName>Formatted_Cost_Centre__c</fullName>
    <formula>LEFT( Cost_Centre__c ,4)</formula>
    <label>Formatted Cost Centre</label>
    <type>Text</type>
</CustomField>