force-app/main/default/objects/npe01__OppPayment__c/fields/Formatted_GL__c.field-meta.xml
<CustomField>
    <fullName>Formatted_GL__c</fullName>
    <formula>LEFT( GL_Code__c ,4)</formula>
    <label>Formatted GL</label>
    <type>Text</type>
</CustomField>