force-app/main/default/objects/npe01__OppPayment__c/fields/Fundraising_Branch_Code__c.field-meta.xml
<CustomField>
    <fullName>Fundraising_Branch_Code__c</fullName>
    <formula>TEXT(npe01__Opportunity__r.Campaign.Branch_Code__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fundraising Branch Code</label>
    <type>Text</type>
</CustomField>