force-app/main/default/objects/npe01__OppPayment__c/fields/Gateway_Payout_Date__c.field-meta.xml
<CustomField>
    <fullName>Gateway_Payout_Date__c</fullName>
    <label>Gateway Payout Date</label>
    <type>Date</type>
</CustomField>