force-app/main/default/objects/npe01__OppPayment__c/fields/Gateway_Payout_Id__c.field-meta.xml
<CustomField>
    <fullName>Gateway_Payout_Id__c</fullName>
    <label>Gateway Payout Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>