force-app/main/default/objects/npe01__OppPayment__c/fields/Gateway_Response__c.field-meta.xml
<CustomField>
    <fullName>Gateway_Response__c</fullName>
    <label>Gateway Response</label>
    <length>255</length>
    <type>Text</type>
</CustomField>