force-app/main/default/objects/npe01__OppPayment__c/fields/Legacy_Banked_Amount_Less_Fees__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Banked_Amount_Less_Fees__c</fullName>
    <label>Legacy Banked Amount Less Fees</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>