force-app/main/default/objects/npe01__OppPayment__c/fields/Legacy_BSB__c.field-meta.xml
<CustomField>
    <fullName>Legacy_BSB__c</fullName>
    <label>Legacy BSB</label>
    <length>155</length>
    <type>Text</type>
</CustomField>