force-app/main/default/objects/npe01__OppPayment__c/fields/Legacy_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Campaign__c</fullName>
    <label>Legacy Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>