force-app/main/default/objects/npe01__OppPayment__c/fields/Legacy_CC_Name__c.field-meta.xml
<CustomField>
    <fullName>Legacy_CC_Name__c</fullName>
    <label>Legacy CC Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>