force-app/main/default/objects/npe01__OppPayment__c/fields/Legacy_CC_Type__c.field-meta.xml
<CustomField>
    <fullName>Legacy_CC_Type__c</fullName>
    <label>Legacy CC Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>