force-app/main/default/objects/npe01__OppPayment__c/fields/Legacy_Contact__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Contact__c</fullName>
    <label>Legacy Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>