force-app/main/default/objects/npe01__OppPayment__c/fields/Legacy_Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Payment_Status__c</fullName>
    <label>Legacy Payment Status&apos;</label>
    <length>255</length>
    <type>Text</type>
</CustomField>