force-app/main/default/objects/npe01__OppPayment__c/fields/Legacy_Receipt_Number__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Receipt_Number__c</fullName>
    <label>Legacy Receipt Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>