force-app/main/default/objects/npe01__OppPayment__c/fields/Legacy_Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Record_Type_Name__c</fullName>
    <label>Legacy Record Type Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>