force-app/main/default/objects/npe01__OppPayment__c/fields/Legacy_Recurring_Payment_Txn__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Recurring_Payment_Txn__c</fullName>
    <label>Legacy Recurring Payment Txn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>