force-app/main/default/objects/npe01__OppPayment__c/fields/Legacy_Settlement_Date__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Settlement_Date__c</fullName>
    <label>Legacy Settlement Date</label>
    <type>DateTime</type>
</CustomField>