force-app/main/default/objects/npe01__OppPayment__c/fields/Loaded_to_Nav__c.field-meta.xml
<CustomField>
    <fullName>Loaded_to_Nav__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Has the gift been loaded to NAV?</inlineHelpText>
    <label>Loaded to Nav</label>
    <type>Checkbox</type>
</CustomField>