force-app/main/default/objects/npe01__OppPayment__c/fields/Reconciled_to_bank__c.field-meta.xml
<CustomField>
    <fullName>Reconciled_to_bank__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Has the gift been reconciled to the bank?</inlineHelpText>
    <label>Reconciled to bank</label>
    <type>Checkbox</type>
</CustomField>