force-app/main/default/objects/npe01__OppPayment__c/fields/Refund_Description__c.field-meta.xml
<CustomField>
    <fullName>Refund_Description__c</fullName>
    <label>Refund Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>