force-app/main/default/objects/npe01__OppPayment__c/listViews/All_Payments.listView-meta.xml
<ListView>
    <fullName>All_Payments</fullName>
    <columns>NAME</columns>
    <columns>npe01__Opportunity__c</columns>
    <columns>npe01__Payment_Date__c</columns>
    <columns>npe01__Payment_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>npe01__Payment_Amount__c</field>
        <operation>equals</operation>
        <value>5</value>
    </filters>
    <label>All Payments</label>
</ListView>