force-app/main/default/objects/npe01__OppPayment__c/listViews/Bank_Reconciliation.listView-meta.xml
<ListView>
    <fullName>Bank_Reconciliation</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Financial_Coding__c</columns>
    <columns>GL_Code__c</columns>
    <columns>Cost_Centre__c</columns>
    <columns>npe01__Opportunity__c</columns>
    <columns>npe01__Paid__c</columns>
    <columns>npe01__Payment_Amount__c</columns>
    <columns>npe01__Payment_Date__c</columns>
    <columns>npe01__Payment_Method__c</columns>
    <columns>Reconciled_to_bank__c</columns>
    <columns>Loaded_to_Nav__c</columns>
    <columns>Banking_Reference__c</columns>
    <columns>Cheque_Drawer__c</columns>
    <columns>Cheque_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Reconciled_to_bank__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>npe01__Paid__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Bank Reconciliation</label>
</ListView>