force-app/main/default/objects/npe01__OppPayment__c/listViews/Reconcile_RG_Dec_2022.listView-meta.xml
<ListView>
    <fullName>Reconcile_RG_Dec_2022</fullName>
    <columns>NAME</columns>
    <columns>npe01__Opportunity__c</columns>
    <columns>Gateway_Payout_Id__c</columns>
    <columns>Gateway_Payout_Date__c</columns>
    <columns>npsp_plus__Gateway_Transaction_ID__c</columns>
    <columns>npsp__Gateway_Payment_ID__c</columns>
    <columns>npe01__Paid__c</columns>
    <columns>npe01__Payment_Date__c</columns>
    <columns>npe01__Scheduled_Date__c</columns>
    <columns>npe01__Payment_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Gateway__c</field>
        <operation>equals</operation>
        <value>Stripe</value>
    </filters>
    <filters>
        <field>Gateway_Payout_Date__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>npe01__Scheduled_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>12/1/2022</value>
    </filters>
    <filters>
        <field>npe01__Scheduled_Date__c</field>
        <operation>lessThan</operation>
        <value>1/1/2023</value>
    </filters>
    <label>Reconcile RG Dec 2022</label>
</ListView>