force-app/main/default/objects/npe01__OppPayment__c/listViews/Shopify_Payments.listView-meta.xml
<ListView>
    <fullName>Shopify_Payments</fullName>
    <columns>NAME</columns>
    <columns>npe01__Payment_Amount__c</columns>
    <columns>Banking_Reference__c</columns>
    <columns>Account__c</columns>
    <columns>npe01__Opportunity__c</columns>
    <columns>Gateway_Payout_Date__c</columns>
    <columns>npe01__Payment_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>npe01__Opportunity__c</field>
        <operation>contains</operation>
        <value>Merchandise</value>
    </filters>
    <filters>
        <field>npsp_plus__Gateway_Transaction_ID__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>npe01__Payment_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>7/1/2022</value>
    </filters>
    <filters>
        <field>npe01__Paid__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Shopify Payments</label>
    <sharedTo>
        <group>Camp_Quality_Staff</group>
    </sharedTo>
</ListView>