force-app/main/default/objects/npe01__OppPayment__c/listViews/X2022_Membership_PAYMENTS.listView-meta.xml
<ListView>
    <fullName>X2022_Membership_PAYMENTS</fullName>
    <columns>NAME</columns>
    <columns>npe01__Opportunity__c</columns>
    <columns>npe01__Payment_Amount__c</columns>
    <columns>npe01__Payment_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>npe01__Payment_Amount__c</field>
        <operation>equals</operation>
        <value>27.5</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2022 12:00 AM</value>
    </filters>
    <label>2022 Membership PAYMENTS</label>
</ListView>